--- a/.github/workflows/anchore.yml
+++ b/.github/workflows/anchore.yml
@@ -27,6 +27,7 @@ jobs:
   Anchore-Build-Scan:
     permissions:
       contents: read # for actions/checkout to fetch code
+      packages: read # read registries used by Dockerfile 
       security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
       actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
     runs-on: ubuntu-latest
