--- a/.github/workflows/anchore.yml
+++ b/.github/workflows/anchore.yml
@@ -20,17 +20,26 @@ on:
   schedule:
     - cron: '39 23 * * 1'
 
+env:
+  # Use docker.io for Docker Hub if empty
+  REGISTRY: ghcr.io
+  # github.repository as <account>/<repo>
+  IMAGE_NAME: ${{ github.repository }}
+
 permissions:
   contents: read
 
 jobs:
+
   Anchore-Build-Scan:
     permissions:
       contents: read # for actions/checkout to fetch code
       packages: read # read registries used by Dockerfile 
       security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
       actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
+
     runs-on: ubuntu-latest
+
     steps:
     - name: Check out the code
       uses: actions/checkout@v4
