Adds crontab for Swift integration

--- a/docker-compose.bagger.yml
+++ b/docker-compose.bagger.yml
@@ -50,6 +50,9 @@ services:
       BAGGER_DEFAULT_PER_BAG_LOG_BAG_CREATION: ${BAGGER_DEFAULT_PER_BAG_LOG_BAG_CREATION:-"true"}
       BAGGER_DEFAULT_PER_BAG_LOG_BAG_LOCATION: ${BAGGER_DEFAULT_PER_BAG_LOG_BAG_LOCATION:-"false"}
       BAGGER_DEFAULT_PER_BAG_REGISTER_BAGS_WITH_ISLANDORA: ${BAGGER_DEFAULT_PER_BAG_REGISTER_BAGS_WITH_ISLANDORA:-"false"}
+      LEAF_BAGGER_OUTPUT: ${LEAF_BAGGER_OUTPUT}
+      LEAF_BAGGER_AUDIT_OUTPUT: ${LEAF_BAGGER_AUDIT_OUTPUT}
+      OS_CONTAINER: ${OS_CONTAINER}
       OS_AUTH_URL: ${OS_AUTH_URL}
       OS_IDENTITY_API_VERSION: ${OS_IDENTITY_API_VERSION}
       OS_INTERFACE: ${OS_INTERFACE}
