--- a/docker-compose.bagger.yml
+++ b/docker-compose.bagger.yml
@@ -51,6 +51,7 @@ services:
       BAGGER_CROND_ENABLE_SERVICE: ${BAGGER_CROND_ENABLE_SERVICE:-"true"}
       BAGGER_CROND_SCHEDULE: ${BAGGER_CROND_SCHEDULE:-1 2 * * *}
       BAGGER_CROND_LOG_LEVEL: ${BAGGER_CROND_LOG_LEVEL:-"8"}
+      BAGGER_OUTPUT_DIR: ${BAGGER_OUTPUT_DIR:-/var/www/bagger/var/output}
       BAGGER_BAG_DOWNLOAD_PREFIX: ${BAGGER_BAG_DOWNLOAD_PREFIX:-""}  # unused
       BAGGER_DEFAULT_PER_BAG_NAME_TEMPLATE: ${BAGGER_DEFAULT_PER_BAG_NAME_TEMPLATE:-"aip_%"}
       BAGGER_DEFAULT_PER_BAG_CONTACT_NAME: ${BAGGER_DEFAULT_PER_BAG_CONTACT_NAME:-Contact Name}
@@ -61,8 +62,8 @@ services:
       BAGGER_DEFAULT_PER_BAG_LOG_BAG_CREATION: ${BAGGER_DEFAULT_PER_BAG_LOG_BAG_CREATION:-"true"}
       BAGGER_DEFAULT_PER_BAG_LOG_BAG_LOCATION: ${BAGGER_DEFAULT_PER_BAG_LOG_BAG_LOCATION:-"false"}
       BAGGER_DEFAULT_PER_BAG_REGISTER_BAGS_WITH_ISLANDORA: ${BAGGER_DEFAULT_PER_BAG_REGISTER_BAGS_WITH_ISLANDORA:-"false"}
-      LEAF_BAGGER_OUTPUT: ${LEAF_BAGGER_OUTPUT}
-      LEAF_BAGGER_AUDIT_OUTPUT: ${LEAF_BAGGER_AUDIT_OUTPUT}
+      LEAF_BAGGER_OUTPUT_DIR: ${LEAF_BAGGER_OUTPUT_DIR}
+      LEAF_BAGGER_AUDIT_OUTPUT_DIR: ${LEAF_BAGGER_AUDIT_OUTPUT_DIR}
       OS_CONTAINER: ${OS_CONTAINER}
       OS_AUTH_URL: ${OS_AUTH_URL}
       OS_IDENTITY_API_VERSION: ${OS_IDENTITY_API_VERSION}
@@ -77,5 +78,5 @@ services:
     networks:
       default: {}
     volumes:
-      - ${BAGGER_AIP_DIR:-bagger-data}:/var/www/bagger/var/output
-      - bagger-log:/var/www/bagger/var/output
+      - ${LOCAL_AIP_DIR:-bagger-data}:${BAGGER_OUTPUT_DIR:-/var/www/bagger/var/output}
+      - bagger-log:/var/www/bagger/var/log
