--- a/.env.sample
+++ b/.env.sample
@@ -44,7 +44,7 @@ SITE=https://islandora.dev
 
 # Environment for the Islandora Bagger container
 BAGGER_REPOSITORY=ghcr.io/cwrc
-BAGGER_TAG=latest
+BAGGER_TAG=local
 
 # Update Islandora REST endpoint and register bag creation
 BAGGER_DEFAULT_PER_BAG_REGISTER_BAGS_WITH_ISLANDORA=false
