Add preservation workflow documentation

--- a/.env.sample
+++ b/.env.sample
@@ -47,6 +47,8 @@ BAGGER_REPOSITORY=ghcr.io/cwrc
 BAGGER_TAG=local
 
 # Update Islandora REST endpoint and register bag creation
+# This tells Islandora Bagger to send a REST request to islandora_bagger_integration module
+# to register the creation of the Bag. To configure this module to accept these requests,            # you must enable the REST endpoint as per <https://github.com/cwrc/islandora_bagger_integration#the-bag-log>
 BAGGER_DEFAULT_PER_BAG_REGISTER_BAGS_WITH_ISLANDORA=false
 
 #
