--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -62,20 +62,31 @@ jobs:
         uses: docker/metadata-action@8e5442c4ef9f78752691e2d8f8d19755c6f78e81 # v5.5.1
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+        tags: |
+          type=semver,enable=true,pattern={{version}}
+          type=semver,enable=true,pattern={{major}}.{{minor}}
+          type=semver,enable=true,pattern={{major}}
+          type=ref,enable=true,event=branch
+          type=ref,enable=false,event=tag
+          type=ref,enable=false,event=pr
 
       # Build and push Docker image with Buildx (don't push on PR)
-      # https://github.com/docker/build-push-action
+      # https://github.com/docker/bake-action
       - name: Build and push Docker image
         id: build-and-push
-        uses: docker/build-push-action@2cdde995de11925a030ce8070c3d77a52ffcf1c0 # v5.3.0
+        uses: docker/bake-action@v5 #v5.3.0
         with:
-          context: .
-          # push: ${{ github.event_name != 'pull_request' }}
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          push: ${{ github.event_name != 'pull_request' }}
+          load: true
+          #provenance: true
+          #sbom: true
+          targets: |
+            leaf-bagger
+          files: |
+            ./docker-bake.hcl
+            ${{ steps.meta.outputs.bake-file }}
+          #cache-from: type=gha
+          #cache-to: type=gha,mode=max
 
       # Sign the resulting Docker image digest except on PRs.
       # This will only write to the public Rekor transparency log when the Docker
