--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -105,9 +105,10 @@ jobs:
 
       # https://docs.github.com/en/actions/publishing-packages/publishing-docker-images
       # https://docs.github.com/en/actions/security-guides/using-artifact-attestations-to-establish-provenance-for-builds
-      - name: Generate artifact attestation
-        uses: actions/attest-build-provenance@v1
-        with:
-          subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME}}
-          subject-digest: ${{ steps.build-and-push.outputs.digest }}
-          push-to-registry: true
+      #- name: Generate artifact attestation
+      #  uses: actions/attest-build-provenance@v1
+      #  with:
+      #    subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME}}
+      #    # docker/bake-action output path differs; update the following
+      #    subject-digest: ${{ steps.build-and-push.outputs.digest }}
+      #    push-to-registry: true
