Update isle_bagger from 0.0.6 to 0.0.7

--- a/docker-compose.bagger.yml
+++ b/docker-compose.bagger.yml
@@ -82,4 +82,4 @@ services:
     volumes:
       - ${LOCAL_AIP_DIR:-bagger-data}:${BAGGER_OUTPUT_DIR:-/var/www/bagger/var/output}
       - bagger-log:/var/www/bagger/var/log
-      - leaf-log:${LEAF_BAGGER_OUTPUT_DIR}
+      - leaf-log:${LEAF_BAGGER_OUTPUT_DIR:-/var/www/bagger/var/output}
