--- a/.github/workflows/anchore.yml
+++ b/.github/workflows/anchore.yml
@@ -19,6 +19,7 @@ on:
     branches: [ "main" ]
   schedule:
     - cron: '39 23 * * 1'
+  workflow_dispatch:
 
 env:
   # Use docker.io for Docker Hub if empty
@@ -34,7 +35,7 @@ jobs:
   Anchore-Build-Scan:
     permissions:
       contents: read # for actions/checkout to fetch code
-      packages: read # read registries used by Dockerfile 
+      packages: read # read registries used by Dockerfile
       security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
       actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
 
@@ -53,7 +54,7 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag localbuild/testimage:latest
+      run: docker buildx bake --set "leaf-bagger.tags=localbuild/testimage:latest"
     - name: Run the Anchore Grype scan action
       uses: anchore/scan-action@3343887d815d7b07465f6fdcd395bd66508d486a #v3.6.4
       id: scan
